--- a/Laprak_2.html
+++ b/Laprak_2.html
@@ -87,7 +87,7 @@
     
      <script>
      const scriptURL = 'isi link google sheets kalian'
-     const form = document.forms['Contact-Form']
+     const form = document.forms['Form-Order']
       form.addEventListener('submit', e => {
         e.preventDefault()
        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
