--- a/Laprak_2.html
+++ b/Laprak_2.html
@@ -86,7 +86,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     
      <script>
-     const scriptURL = 'isi link google sheets kalian'
+     const scriptURL = 'https://script.google.com/macros/s/AKfycbxE2lwANrVHJr3PUGnaUGybvEYe8aoDOI9n9LfEIMSRn3LWDtvdZ6o4G-OWPDJ6LwTX/exec'
      const form = document.forms['Form-Order']
       form.addEventListener('submit', e => {
         e.preventDefault()
