--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
 
     <!-- END FOOTER -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+     const scriptURL = 'https://script.google.com/macros/s/AKfycbxE2lwANrVHJr3PUGnaUGybvEYe8aoDOI9n9LfEIMSRn3LWDtvdZ6o4G-OWPDJ6LwTX/exec'
+     const form = document.forms['Form-Order']
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+       fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+       .then(response => console.log('Success!', response))
+       .catch(error => console.error('Error!', error.message))
+ })
   </body>
 </html>
