--- a/Laprak_2.html
+++ b/Laprak_2.html
@@ -40,7 +40,7 @@
     <!-- START FORM -->
     <div class="container mt-5">
       <center><h2>Formulir Pengisian</h2></center>
-      <form>
+      <form name= "Form-Order" >
         <div class="row mb-3">
           <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Nama</label>
           <div class="col-sm-10">
