--- a/Laprak_2.html
+++ b/Laprak_2.html
@@ -40,29 +40,29 @@
     <!-- START FORM -->
     <div class="container mt-5">
       <center><h2>Formulir Pengisian</h2></center>
-      <form name= "Form-Order" >
+      <form name= "Form-Order" Method="post" >
         <div class="row mb-3">
           <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Nama</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Masukkan Nama" required />
+            <input type="text" class="form-control form-control-sm" id="Nama" placeholder="Masukkan Nama" required />
           </div>
         </div>
         <div class="row mb-3">
           <label for="colFormLabelEmail" class="col-sm-2 col-form-label">Email</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="colFormLabelEmail" placeholder="Masukkan Email" required />
+            <input type="email" class="form-control" id="Email" placeholder="Masukkan Email" required />
           </div>
         </div>
         <div class="row mb-3">
           <label for="colFormLabelAlamat" class="col-sm-2 col-form-label col-form-label-lg">Alamat</label>
           <div class="col-sm-10">
-            <textarea class="form-control form-control-lg" id="colFormLabelAlamat" placeholder="Masukkan Alamat" required></textarea>
+            <textarea class="form-control form-control-lg" id="Alamat" placeholder="Masukkan Alamat" required></textarea>
           </div>
         </div>
         <div class="row mb-3">
           <label for="colFormLabelJudulBuku" class="col-sm-2 col-form-label">Judul Buku</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="colFormLabelJudulBuku" placeholder="Masukkan Judul Buku" required />
+            <input type="text" class="form-control" id="JudulBuku" placeholder="Masukkan Judul Buku" required />
           </div>
         </div>
         <br />
